cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

#add_executable(leetcode
#        FindZeroMatrix.cpp)
#add_executable(leetcode
#        AutoComplete.cpp)
#add_executable(leetcode
#        ZeroMap.cpp)
#add_executable(leetcode
#        CoursesTake.cpp)
#add_executable(leetcode
#        LongestCommonArray.cpp)
#add_executable(leetcode
#        findParents.cpp)
#add_executable(leetcode
#        vectorClass.cpp)
#add_executable(leetcode
#        allPairs.cpp)
#add_executable(leetcode
#        wordExtension.cpp)
#add_executable(leetcode
#        exampleCode.cpp)
add_executable(leetcode
        behaviorTree.cpp)